[package]
name = "todo_mvc"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
futures = "0.3"
thiserror = "1.0"
# JSON Libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Web Libs
warp = "0.3"
# DB Libs
sqlx = {version = "0.5", features= ["runtime-tokio-rustls","postgres"]}
sqlb = "0.0.7"